--- a/back-end/src/main/resources/application-pro.yaml
+++ b/back-end/src/main/resources/application-pro.yaml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url:
-    username:
-    password:
+    url: jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=utf8mb4
+    username: root
+    password: Hollyarea173MySQL
   jpa:
     hibernate:
       ddl-auto: none
