--- a/back-end/src/main/resources/application-dev.yaml
+++ b/back-end/src/main/resources/application-dev.yaml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=utf8mb4&serverTimezone=GMT%2B8
+    url: jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=utf8mb4&serverTimezone=GMT%2B8&useSSL=false
     username: root
     password: Hollyarea173MySQL
   jpa:
