--- a/Last/src/main/resources/application.yaml
+++ b/Last/src/main/resources/application.yaml
@@ -4,5 +4,10 @@ spring:
     url: jdbc:mysql://localhost:3306/blog?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: 123456
+    password: Hollyarea173MySQL
+
+server:
+  port: 8089
+  servlet:
+    context-path: /demo
 
